syntax = "proto3";

option java_package = "seproject.proto";
option java_multiple_files = true;
option java_outer_classname = "DataStorageProto";

service DataStorageService {
  rpc ReadData (ReadRequest) returns (ReadResponse);
  rpc WriteData (WriteRequest) returns (WriteResponse);
}

message ReadRequest {
  string source = 1;
}

message ReadResponse {
  string content = 1;
  string error = 2;
}

message WriteRequest {
  string destination = 1;
  string data = 2;
}

message WriteResponse {
  bool success = 1;
  string error = 2;
}